show route connected

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,8 +40,8 @@ body {
   }
   
   img {
-    max-width: 100%; /* Set a maximum width relative to the viewport */
-    height: auto; /* Maintains aspect ratio */
+    max-width: 45vw; /* Set a maximum width relative to the viewport */
+    height: 45vh; /* Maintains aspect ratio */
     float: left; /* Aligns the image to the left */
     margin-right: 20px; /* Adds some space to the right of the image */
 }
